The graph traversal algorithm is optimized, and the recursive implementation is replaced by a loop implementation. Both depth and breadth-first algorithms are now supported.